--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="root_parent" alignment="center" hgap="10" prefHeight="600.0" prefWidth="800.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.181" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane fx:id="GridPaneRootParent" alignment="center" hgap="10" prefHeight="600.0" prefWidth="800.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.211" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
@@ -31,9 +31,9 @@
                             <content>
                                 <AnchorPane prefHeight="497.0" prefWidth="800.0">
                                     <children>
-                                        <Button fx:id="btn_node_sync_by_user" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="开始同步" />
-                                        <TextArea fx:id="ta_node_log" editable="false" layoutX="14.0" layoutY="49.0" prefHeight="362.0" prefWidth="775.0" promptText="同步日志" />
-                                        <CheckBox fx:id="cb_node_sync_by_auto" layoutX="97.0" layoutY="18.0" mnemonicParsing="false" text="自动同步" />
+                                        <Button fx:id="buttonNodeSyncByUser" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="开始同步" />
+                                        <TextArea fx:id="textAreaNodeLog" editable="false" layoutX="14.0" layoutY="49.0" prefHeight="364.0" prefWidth="775.0" promptText="同步日志" />
+                                        <CheckBox fx:id="checkBoxNodeSyncByAuto" layoutX="97.0" layoutY="18.0" mnemonicParsing="false" text="自动同步" />
                                     </children></AnchorPane>
                             </content>
                         </Tab>
@@ -42,55 +42,72 @@
                             <content>
                                 <AnchorPane prefHeight="497.0" prefWidth="800.0">
                                     <children>
-                                        <ListView fx:id="lv_disk_directory_cache" layoutX="14.0" layoutY="52.0" prefHeight="100.0" prefWidth="306.0" />
-                                        <Label layoutX="143.0" layoutY="27.0" text="缓存目录" />
-                                        <Label layoutX="609.0" layoutY="27.0" text="存放目录" />
-                                        <ListView fx:id="lv_disk_directory_target" layoutX="480.0" layoutY="52.0" prefHeight="100.0" prefWidth="306.0" />
-                                        <Button fx:id="btn_disk_target_to_cache" layoutX="356.0" layoutY="71.0" mnemonicParsing="false" text="存放移到缓存" />
-                                        <Button fx:id="btn_disk_cache_to_target" layoutX="356.0" layoutY="111.0" mnemonicParsing="false" text="缓存移到存放" />
-                                        <Button fx:id="btn_disk_target_delete" layoutX="657.0" layoutY="160.0" mnemonicParsing="false" text="删除" />
-                                        <Button fx:id="btn_disk_cache_add" layoutX="123.0" layoutY="160.0" mnemonicParsing="false" text="新增" />
-                                        <Button fx:id="btn_disk_target_add" layoutX="589.0" layoutY="160.0" mnemonicParsing="false" text="新增" />
-                                        <Button fx:id="btn_disk_cache_delete" layoutX="191.0" layoutY="160.0" mnemonicParsing="false" text="删除" />
+                                        <ListView fx:id="listViewDiskDirectoryCache" layoutX="14.0" layoutY="52.0" prefHeight="315.0" prefWidth="306.0" />
+                                        <Label layoutX="14.0" layoutY="27.0" text="缓存目录" />
+                                        <Label layoutX="480.0" layoutY="27.0" text="存放目录" />
+                                        <ListView fx:id="listViewDiskDirectoryTarget" layoutX="480.0" layoutY="52.0" prefHeight="315.0" prefWidth="306.0" />
+                                        <Button fx:id="buttonDiskTargetToCache" disable="true" layoutX="379.0" layoutY="241.0" mnemonicParsing="false" text="&lt;&lt;&lt;" />
+                                        <Button fx:id="buttonDiskCacheToTarget" disable="true" layoutX="379.0" layoutY="161.0" mnemonicParsing="false" text="&gt;&gt;&gt;" />
+                                        <Button fx:id="buttonDiskTargetDelete" layoutX="668.0" layoutY="378.0" mnemonicParsing="false" text="删除" />
+                                        <Button fx:id="buttonDiskCacheAdd" layoutX="105.0" layoutY="378.0" mnemonicParsing="false" text="新增" />
+                                        <Button fx:id="buttonDiskTargetAdd" layoutX="567.0" layoutY="378.0" mnemonicParsing="false" text="新增" />
+                                        <Button fx:id="buttonDiskCacheDelete" layoutX="193.0" layoutY="378.0" mnemonicParsing="false" text="删除" />
+                              <Label fx:id="labelDiskCacheSelect" layoutX="75.0" layoutY="27.0" maxWidth="243.0" />
+                              <Label fx:id="labelDiskTargetSelect" layoutX="541.0" layoutY="27.0" maxWidth="243.0" />
+
+                              <Button fx:id="buttonDiskAddWaitQueue" disable="true" layoutX="350.0" layoutY="378.0" mnemonicParsing="false" text="添加到磁盘队列" />
                                     </children></AnchorPane>
                             </content>
                         </Tab>
 
-                        <Tab text="系统配置">
+                        <Tab text="Chia系统配置">
                             <content>
                                 <AnchorPane prefHeight="497.0" prefWidth="800.0">
                            <children>
-                              <Label fx:id="lb_system_memory_total" layoutX="14.0" layoutY="14.0" text="总共安装内存:0" />
-                              <Label fx:id="lb_system_memory_current" layoutX="14.0" layoutY="37.0" text="当前可用内存:0" />
+                              <Label fx:id="labelSystemMemoryTotal" layoutX="14.0" layoutY="14.0" text="总共安装内存:0" />
+                              <Label fx:id="labelSystemMemoryCurrent" layoutX="14.0" layoutY="37.0" text="当前可用内存:0" />
                               <Label layoutX="14.0" layoutY="82.0" text="分配内存" />
                               <Label layoutX="223.0" layoutY="82.0" text="M" />
-                              <Slider fx:id="slider_system_memory_change" layoutX="14.0" layoutY="111.0" max="6144.0" min="2048.0" prefHeight="14.0" prefWidth="221.0" value="4096.0" />
-                              <TextField fx:id="tf_system_memory_value" editable="false" layoutX="72.0" layoutY="78.0" prefHeight="23.0" prefWidth="142.0" text="4096" />
+                              <Slider fx:id="sliderSystemMemoryChange" layoutX="14.0" layoutY="111.0" max="6144.0" min="2048.0" prefHeight="14.0" prefWidth="221.0" value="4096.0" />
+                              <TextField fx:id="textFieldSystemMemoryValue" editable="false" layoutX="72.0" layoutY="78.0" prefHeight="23.0" prefWidth="142.0" text="4096" />
                               <Label layoutX="300.0" layoutY="82.0" text="分配线程" />
-                              <TextField fx:id="tf_system_thread_value" editable="false" layoutX="355.0" layoutY="78.0" prefHeight="23.0" prefWidth="90.0" text="4" />
-                              <Slider fx:id="slider_system_thread_change" layoutX="300.0" layoutY="111.0" max="16.0" min="2.0" prefHeight="14.0" prefWidth="154.0" value="4.0" />
-                              <TextField fx:id="tf_system_farmer_public_key" editable="false" layoutX="84.0" layoutY="189.0" prefHeight="23.0" prefWidth="360.0" />
+                              <TextField fx:id="textFieldSystemThreadValue" editable="false" layoutX="355.0" layoutY="78.0" prefHeight="23.0" prefWidth="90.0" text="4" />
+                              <Slider fx:id="sliderSystemThreadChange" layoutX="300.0" layoutY="111.0" max="16.0" min="2.0" prefHeight="14.0" prefWidth="154.0" value="4.0" />
+                              <TextField fx:id="textFieldSystemFarmerPublicKey" editable="false" layoutX="84.0" layoutY="189.0" prefHeight="23.0" prefWidth="360.0" />
                               <Label layoutX="14.0" layoutY="193.0" text="farmer公钥" />
                               <Label layoutX="13.0" layoutY="231.0" text="pool    公钥" />
-                              <TextField fx:id="tf_system_pool_public_key" editable="false" layoutX="84.0" layoutY="227.0" prefHeight="23.0" prefWidth="360.0" />
-                              <ChoiceBox fx:id="cb_system_key" layoutX="14.0" layoutY="148.0" prefWidth="150.0" />
+                              <TextField fx:id="textFieldSystemPoolPublicKey" editable="false" layoutX="84.0" layoutY="227.0" prefHeight="23.0" prefWidth="360.0" />
+                              <ChoiceBox fx:id="choiceBoxSystemKey" layoutX="14.0" layoutY="148.0" prefWidth="150.0" />
+                              <ChoiceBox fx:id="choiceBoxSystemKey1" layoutX="14.0" layoutY="280.0" prefWidth="150.0" />
                            </children></AnchorPane>
+                            </content>
+                        </Tab>
+
+                        <Tab text="任务队列">
+                            <content>
+                                <AnchorPane prefHeight="497.0" prefWidth="800.0">
+                                    <children>
+
+                                        <Label layoutX="14.0" layoutY="14.0" text="任务预览" />
+                                        <ListView fx:id="listViewDiskWaitQueue" layoutX="14.0" layoutY="39.0" prefHeight="344.0" prefWidth="773.0" />
+                                        <Label fx:id="labelDiskWaitQueue" layoutX="71.0" layoutY="14.0" maxWidth="710.0" />
+                                    </children></AnchorPane>
                             </content>
                         </Tab>
 
                     </tabs>
                 </TabPane>
-            <TextField fx:id="tf_normal_program_directory" editable="false" layoutX="96.0" layoutY="14.0" prefHeight="23.0" prefWidth="261.0" promptText="C:/Users/Administrator/AppData/Local/chia-blockchain" />
-            <Button fx:id="btn_normal_change_program_directory" layoutX="357.0" layoutY="14.0" mnemonicParsing="false" text="更改目录" />
-            <Label fx:id="lb_normal_current_calculation_power" layoutX="431.0" layoutY="18.0" text="全网算力:" />
+            <TextField fx:id="textFieldNormalProgramDirectory" editable="false" layoutX="96.0" layoutY="14.0" prefHeight="23.0" prefWidth="261.0" promptText="C:/Users/Administrator/AppData/Local/chia-blockchain" />
+            <Button fx:id="buttonNormalChangeProgramDirectory" layoutX="357.0" layoutY="14.0" mnemonicParsing="false" text="更改目录" />
+            <Label fx:id="labelNormalCurrentCalculationPower" layoutX="431.0" layoutY="18.0" text="全网算力:" />
             <Label layoutX="14.0" layoutY="18.0" text="chia程序目录" />
-            <Label fx:id="lb_normal_current_price" layoutX="431.0" layoutY="54.0" text="当前价格:" />
+            <Label fx:id="labelNormalCurrentPrice" layoutX="431.0" layoutY="54.0" text="当前价格:" />
             <Label layoutX="14.0" layoutY="54.0" text="chia文件目录" />
-            <TextField fx:id="tf_normal_config_file_directory" editable="false" layoutX="96.0" layoutY="50.0" prefHeight="23.0" prefWidth="261.0" promptText="C:/Users/Administrator/.chia" />
-            <Button fx:id="btn_normal_change_config_file_directory" layoutX="357.0" layoutY="50.0" mnemonicParsing="false" text="更改目录" />
+            <TextField fx:id="textFieldNormalConfigFileDirectory" editable="false" layoutX="96.0" layoutY="50.0" prefHeight="23.0" prefWidth="261.0" promptText="C:/Users/Administrator/.chia" />
+            <Button fx:id="buttonNormalChangeConfigFileDirectory" layoutX="357.0" layoutY="50.0" mnemonicParsing="false" text="更改目录" />
             <Label layoutX="14.0" layoutY="90.0" text="chia当前版本" />
-            <TextField fx:id="tf_normal_app_version_directory" editable="false" layoutX="96.0" layoutY="86.0" prefHeight="23.0" prefWidth="261.0" promptText="app-1.0.0" />
-            <Button fx:id="btn_normal_start_p_task" disable="true" layoutX="695.0" layoutY="14.0" mnemonicParsing="false" text="开始P盘" />
+            <TextField fx:id="textFieldNormalAppVersionDirectory" editable="false" layoutX="96.0" layoutY="86.0" prefHeight="23.0" prefWidth="261.0" promptText="app-1.0.0" />
+            <Button fx:id="buttonNormalStartPTask" disable="true" layoutX="695.0" layoutY="14.0" mnemonicParsing="false" text="开始P盘" />
             </children></AnchorPane>
 
 
