--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -55,7 +55,7 @@
                               <Label fx:id="labelDiskCacheSelect" layoutX="75.0" layoutY="27.0" maxWidth="243.0" />
                               <Label fx:id="labelDiskTargetSelect" layoutX="541.0" layoutY="27.0" maxWidth="243.0" />
 
-                              <Button fx:id="buttonDiskAddWaitQueue" disable="true" layoutX="350.0" layoutY="378.0" mnemonicParsing="false" text="添加到磁盘队列" />
+                              <Button fx:id="buttonDiskAddToTaskQueue" disable="true" layoutX="350.0" layoutY="378.0" mnemonicParsing="false" text="添加到任务队列" />
                                     </children></AnchorPane>
                             </content>
                         </Tab>
@@ -89,8 +89,8 @@
                                     <children>
 
                                         <Label layoutX="14.0" layoutY="14.0" text="任务预览" />
-                                        <ListView fx:id="listViewDiskWaitQueue" layoutX="14.0" layoutY="39.0" prefHeight="344.0" prefWidth="773.0" />
-                                        <Label fx:id="labelDiskWaitQueue" layoutX="71.0" layoutY="14.0" maxWidth="710.0" />
+                                        <ListView fx:id="listViewTaskQueue" layoutX="14.0" layoutY="39.0" prefHeight="344.0" prefWidth="773.0" />
+                                        <Label fx:id="labelTaskSelect" layoutX="71.0" layoutY="14.0" maxWidth="710.0" />
                                     </children></AnchorPane>
                             </content>
                         </Tab>
