--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="GridPaneRootParent" alignment="center" hgap="10" prefHeight="600.0" prefWidth="800.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.211" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane fx:id="GridPaneRootParent" alignment="center" hgap="10" prefHeight="600.0" prefWidth="800.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.181" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
@@ -36,10 +36,32 @@
                                         <Button fx:id="buttonNodeSyncByUser" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="开始同步" />
                                         <TextArea fx:id="textAreaNodeLog" editable="false" layoutX="14.0" layoutY="49.0" prefHeight="364.0" prefWidth="775.0" promptText="同步日志" />
                                         <CheckBox fx:id="checkBoxNodeSyncByAuto" layoutX="97.0" layoutY="18.0" mnemonicParsing="false" text="自动同步" />
+                              <CheckBox fx:id="checkBoxNodeSyncForChina" layoutX="184.0" layoutY="18.0" mnemonicParsing="false" selected="true" text="只同步国内节点" />
                                     </children></AnchorPane>
                             </content>
                         </Tab>
-
+                        <Tab text="Chia系统配置">
+                            <content>
+                                <AnchorPane prefHeight="497.0" prefWidth="800.0">
+                                    <children>
+                                        <Label fx:id="labelSystemMemoryTotal" layoutX="14.0" layoutY="14.0" text="总共安装内存:0" />
+                                        <Label fx:id="labelSystemMemoryCurrent" layoutX="14.0" layoutY="37.0" text="当前可用内存:0" />
+                                        <Label layoutX="14.0" layoutY="82.0" text="分配内存" />
+                                        <Label layoutX="223.0" layoutY="82.0" text="M" />
+                                        <Slider fx:id="sliderSystemMemoryChange" layoutX="14.0" layoutY="111.0" max="6144.0" min="2048.0" prefHeight="14.0" prefWidth="221.0" value="4096.0" />
+                                        <TextField fx:id="textFieldSystemMemoryValue" editable="false" layoutX="72.0" layoutY="78.0" prefHeight="23.0" prefWidth="142.0" text="4096" />
+                                        <Label layoutX="300.0" layoutY="82.0" text="分配线程" />
+                                        <TextField fx:id="textFieldSystemThreadValue" editable="false" layoutX="355.0" layoutY="78.0" prefHeight="23.0" prefWidth="90.0" text="2" />
+                                        <Slider fx:id="sliderSystemThreadChange" layoutX="300.0" layoutY="111.0" max="16.0" min="2.0" prefHeight="14.0" prefWidth="154.0" value="2.0" />
+                                        <TextField fx:id="textFieldSystemFarmerPublicKey" editable="false" layoutX="84.0" layoutY="189.0" prefHeight="23.0" prefWidth="360.0" />
+                                        <Label layoutX="14.0" layoutY="193.0" text="farmer公钥" />
+                                        <Label layoutX="13.0" layoutY="231.0" text="pool    公钥" />
+                                        <TextField fx:id="textFieldSystemPoolPublicKey" editable="false" layoutX="84.0" layoutY="227.0" prefHeight="23.0" prefWidth="360.0" />
+                                        <ChoiceBox fx:id="choiceBoxSystemKey" layoutX="14.0" layoutY="148.0" prefWidth="150.0" />
+                                        <ChoiceBox fx:id="choiceBoxSystemPType" layoutX="180.0" layoutY="148.0" prefHeight="23.0" prefWidth="261.0" />
+                                    </children></AnchorPane>
+                            </content>
+                        </Tab>
                         <Tab text="磁盘配置">
                             <content>
                                 <AnchorPane prefHeight="497.0" prefWidth="800.0">
@@ -62,29 +84,6 @@
                             </content>
                         </Tab>
 
-                        <Tab text="Chia系统配置">
-                            <content>
-                                <AnchorPane prefHeight="497.0" prefWidth="800.0">
-                           <children>
-                              <Label fx:id="labelSystemMemoryTotal" layoutX="14.0" layoutY="14.0" text="总共安装内存:0" />
-                              <Label fx:id="labelSystemMemoryCurrent" layoutX="14.0" layoutY="37.0" text="当前可用内存:0" />
-                              <Label layoutX="14.0" layoutY="82.0" text="分配内存" />
-                              <Label layoutX="223.0" layoutY="82.0" text="M" />
-                              <Slider fx:id="sliderSystemMemoryChange" layoutX="14.0" layoutY="111.0" max="6144.0" min="2048.0" prefHeight="14.0" prefWidth="221.0" value="4096.0" />
-                              <TextField fx:id="textFieldSystemMemoryValue" editable="false" layoutX="72.0" layoutY="78.0" prefHeight="23.0" prefWidth="142.0" text="4096" />
-                              <Label layoutX="300.0" layoutY="82.0" text="分配线程" />
-                              <TextField fx:id="textFieldSystemThreadValue" editable="false" layoutX="355.0" layoutY="78.0" prefHeight="23.0" prefWidth="90.0" text="4" />
-                              <Slider fx:id="sliderSystemThreadChange" layoutX="300.0" layoutY="111.0" max="16.0" min="2.0" prefHeight="14.0" prefWidth="154.0" value="4.0" />
-                              <TextField fx:id="textFieldSystemFarmerPublicKey" editable="false" layoutX="84.0" layoutY="189.0" prefHeight="23.0" prefWidth="360.0" />
-                              <Label layoutX="14.0" layoutY="193.0" text="farmer公钥" />
-                              <Label layoutX="13.0" layoutY="231.0" text="pool    公钥" />
-                              <TextField fx:id="textFieldSystemPoolPublicKey" editable="false" layoutX="84.0" layoutY="227.0" prefHeight="23.0" prefWidth="360.0" />
-                              <ChoiceBox fx:id="choiceBoxSystemKey" layoutX="14.0" layoutY="148.0" prefWidth="150.0" />
-                              <ChoiceBox fx:id="choiceBoxSystemKey1" layoutX="14.0" layoutY="280.0" prefWidth="150.0" />
-                           </children></AnchorPane>
-                            </content>
-                        </Tab>
-
                         <Tab text="任务队列">
                             <content>
                                 <AnchorPane prefHeight="497.0" prefWidth="800.0">
@@ -94,11 +93,12 @@
                                         <Label fx:id="labelTaskSelect" layoutX="71.0" layoutY="14.0" maxWidth="710.0" />
                               <TableView fx:id="tableViewTaskQueue" layoutX="14.0" layoutY="36.0" prefHeight="371.0" prefWidth="773.0">
                                 <columns>
-                                    <TableColumn maxWidth="150.0" minWidth="70.0" prefWidth="-1.0" text="序号" />
+                                    <TableColumn maxWidth="60.0" minWidth="50.0" prefWidth="-1.0" text="序号" />
+                                    <TableColumn maxWidth="150.0" minWidth="100.0" prefWidth="-1.0" text="公共指纹" />
                                   <TableColumn maxWidth="1000.0" minWidth="130.0" prefWidth="-1.0" text="缓存路径" />
                                     <TableColumn maxWidth="1000.0" minWidth="130.0" prefWidth="-1.0" text="目标路径" />
-                                    <TableColumn maxWidth="100.0" minWidth="100.0" prefWidth="-1.0" text="类型" />
-                                    <TableColumn maxWidth="200.0" minWidth="60.0" prefWidth="-1.0" text="线程" />
+                                    <TableColumn maxWidth="50.0" minWidth="50.0" prefWidth="-1.0" text="类型" />
+                                    <TableColumn maxWidth="200.0" minWidth="50.0" prefWidth="-1.0" text="线程" />
                                     <TableColumn maxWidth="300.0" minWidth="60.0" prefWidth="-1.0" text="内存" />
                                     <TableColumn maxWidth="100.0" minWidth="50.0" prefWidth="-1.0" text="进度" />
                                     <TableColumn maxWidth="100.0" minWidth="100.0" prefWidth="-1.0" text="用时" />
