--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="GridPaneRootParent" alignment="center" hgap="10" prefHeight="600.0" prefWidth="800.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.181" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane fx:id="GridPaneRootParent" alignment="center" hgap="10" prefHeight="600.0" prefWidth="800.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.91" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
@@ -122,7 +122,7 @@
             <Button fx:id="buttonNormalChangeConfigFileDirectory" layoutX="357.0" layoutY="50.0" mnemonicParsing="false" text="更改目录" />
             <Label layoutX="14.0" layoutY="90.0" text="chia当前版本" />
             <TextField fx:id="textFieldNormalAppVersionDirectory" editable="false" layoutX="96.0" layoutY="86.0" prefHeight="23.0" prefWidth="261.0" promptText="app-1.0.0" />
-            <Button fx:id="buttonNormalStartPTask" disable="true" layoutX="695.0" layoutY="14.0" mnemonicParsing="false" text="开始P盘" />
+            <Button fx:id="buttonNormalStartPTask" layoutX="695.0" layoutY="14.0" mnemonicParsing="false" text="开始P盘" />
             </children></AnchorPane>
 
 
