--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="GridPaneRootParent" alignment="center" hgap="10" prefHeight="600.0" prefWidth="800.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.91" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane fx:id="GridPaneRootParent" alignment="center" hgap="10" prefHeight="600.0" prefWidth="800.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.181" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
@@ -27,7 +27,7 @@
     <children>
         <AnchorPane minHeight="0.0" minWidth="0.0">
             <children>
-                <TabPane layoutY="125.0" prefHeight="445.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE">
+                <TabPane fx:id="tab_pane" layoutY="125.0" prefHeight="445.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE">
                     <tabs>
                         <Tab text="节点同步">
                             <content>
@@ -66,20 +66,16 @@
                             <content>
                                 <AnchorPane prefHeight="497.0" prefWidth="800.0">
                                     <children>
-                                        <ListView fx:id="listViewDiskDirectoryCache" layoutX="14.0" layoutY="52.0" prefHeight="315.0" prefWidth="306.0" />
+                                        <ListView fx:id="listViewDiskDirectoryCache" layoutX="14.0" layoutY="52.0" prefHeight="350.0" prefWidth="306.0" />
                                         <Label layoutX="14.0" layoutY="27.0" text="缓存目录" />
                                         <Label layoutX="480.0" layoutY="27.0" text="存放目录" />
-                                        <ListView fx:id="listViewDiskDirectoryTarget" layoutX="480.0" layoutY="52.0" prefHeight="315.0" prefWidth="306.0" />
+                                        <ListView fx:id="listViewDiskDirectoryTarget" layoutX="480.0" layoutY="52.0" prefHeight="350.0" prefWidth="306.0" />
                                         <Button fx:id="buttonDiskTargetToCache" disable="true" layoutX="379.0" layoutY="241.0" mnemonicParsing="false" text="&lt;&lt;&lt;" />
                                         <Button fx:id="buttonDiskCacheToTarget" disable="true" layoutX="379.0" layoutY="161.0" mnemonicParsing="false" text="&gt;&gt;&gt;" />
-                                        <Button fx:id="buttonDiskTargetDelete" layoutX="668.0" layoutY="378.0" mnemonicParsing="false" text="删除" />
-                                        <Button fx:id="buttonDiskCacheAdd" layoutX="105.0" layoutY="378.0" mnemonicParsing="false" text="新增" />
-                                        <Button fx:id="buttonDiskTargetAdd" layoutX="567.0" layoutY="378.0" mnemonicParsing="false" text="新增" />
-                                        <Button fx:id="buttonDiskCacheDelete" layoutX="193.0" layoutY="378.0" mnemonicParsing="false" text="删除" />
                               <Label fx:id="labelDiskCacheSelect" layoutX="75.0" layoutY="27.0" maxWidth="243.0" />
                               <Label fx:id="labelDiskTargetSelect" layoutX="541.0" layoutY="27.0" maxWidth="243.0" />
 
-                              <Button fx:id="buttonDiskAddToTaskQueue" disable="true" layoutX="350.0" layoutY="378.0" mnemonicParsing="false" text="添加到任务队列" />
+                              <Button fx:id="buttonDiskAddToTaskQueue" disable="true" layoutX="351.0" layoutY="379.0" mnemonicParsing="false" text="添加到任务队列" />
                                     </children></AnchorPane>
                             </content>
                         </Tab>
@@ -94,15 +90,15 @@
                               <TableView fx:id="tableViewTaskQueue" layoutX="14.0" layoutY="36.0" prefHeight="371.0" prefWidth="773.0">
                                 <columns>
                                     <TableColumn maxWidth="60.0" minWidth="50.0" prefWidth="-1.0" text="序号" />
-                                    <TableColumn maxWidth="150.0" minWidth="100.0" prefWidth="-1.0" text="公共指纹" />
+                                    <TableColumn maxWidth="150.0" minWidth="80.0" prefWidth="-1.0" text="公共指纹" />
                                   <TableColumn maxWidth="1000.0" minWidth="130.0" prefWidth="-1.0" text="缓存路径" />
                                     <TableColumn maxWidth="1000.0" minWidth="130.0" prefWidth="-1.0" text="目标路径" />
                                     <TableColumn maxWidth="50.0" minWidth="50.0" prefWidth="-1.0" text="类型" />
-                                    <TableColumn maxWidth="200.0" minWidth="50.0" prefWidth="-1.0" text="线程" />
-                                    <TableColumn maxWidth="300.0" minWidth="60.0" prefWidth="-1.0" text="内存" />
-                                    <TableColumn maxWidth="100.0" minWidth="50.0" prefWidth="-1.0" text="进度" />
-                                    <TableColumn maxWidth="100.0" minWidth="100.0" prefWidth="-1.0" text="用时" />
-
+                                    <TableColumn maxWidth="50.0" minWidth="40.0" prefWidth="-1.0" text="线程" />
+                                    <TableColumn maxWidth="60.0" minWidth="40.0" prefWidth="-1.0" text="内存" />
+                                    <TableColumn maxWidth="60.0" minWidth="35.0" prefWidth="-1.0" text="进度" />
+                                    <TableColumn maxWidth="150.0" minWidth="130.0" prefWidth="-1.0" text="创建时间" />
+                                    <TableColumn maxWidth="100.0" minWidth="90.0" prefWidth="-1.0" text="用时" />
 
                                 </columns>
                               </TableView>
@@ -121,8 +117,10 @@
             <TextField fx:id="textFieldNormalConfigFileDirectory" editable="false" layoutX="96.0" layoutY="50.0" prefHeight="23.0" prefWidth="261.0" promptText="C:/Users/Administrator/.chia" />
             <Button fx:id="buttonNormalChangeConfigFileDirectory" layoutX="357.0" layoutY="50.0" mnemonicParsing="false" text="更改目录" />
             <Label layoutX="14.0" layoutY="90.0" text="chia当前版本" />
-            <TextField fx:id="textFieldNormalAppVersionDirectory" editable="false" layoutX="96.0" layoutY="86.0" prefHeight="23.0" prefWidth="261.0" promptText="app-1.0.0" />
+            <TextField fx:id="textFieldNormalAppVersionDirectory" editable="false" layoutX="96.0" layoutY="86.0" prefHeight="23.0" prefWidth="125.0" promptText="app-1.0.0" />
             <Button fx:id="buttonNormalStartPTask" layoutX="695.0" layoutY="14.0" mnemonicParsing="false" text="开始P盘" />
+            <Label layoutX="234.0" layoutY="90.0" text="并发任务数" />
+            <TextField fx:id="textFieldNormalRunningTask" layoutX="306.0" layoutY="86.0" prefHeight="23.0" prefWidth="51.0" promptText="1" text="1" />
             </children></AnchorPane>
 
 
